package ethanmmd.mastermind.views.graphics;


public class ProposalView {

    private final SecretCombinationView secretCombinationView;

    public ProposalView() {
        this.secretCombinationView = new SecretCombinationView();
    }


}
