@startuml

title __GRAPHICS's Class Diagram__\n

  namespace ethanmmd.mastermind {
    namespace views {
      namespace graphics {
        class ethanmmd.mastermind.views.graphics.ColorView {
            {static} - INITIALS : char[]
            ~ ColorView()
            {static} ~ allInitials()
            {static} ~ getInstance()
            ~ write()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace views {
      namespace graphics {
        class ethanmmd.mastermind.views.graphics.ErrorView {
            {static} - MESSAGES : String[]
            ~ ErrorView()
            ~ writeln()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace views {
      namespace graphics {
        class ethanmmd.mastermind.views.graphics.GraphicsView {
            + GraphicsView()
            + interact()
            + visit()
            + visit()
            + visit()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace views {
      namespace graphics {
        class ethanmmd.mastermind.views.graphics.ProposalView {
            ~ ProposalView()
            ~ interact()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace views {
      namespace graphics {
        class ethanmmd.mastermind.views.graphics.ResultView {
            ~ ResultView()
            ~ writeln()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace views {
      namespace graphics {
        class ethanmmd.mastermind.views.graphics.SecretCombinationView {
            ~ SecretCombinationView()
            ~ writeln()
        }
      }
    }
  }
  

  namespace ethanmmd.mastermind {
    namespace views {
      namespace graphics {
        class ethanmmd.mastermind.views.graphics.StartView {
            ~ interact()
        }
      }
    }
  }
  

  ethanmmd.mastermind.views.graphics.ColorView -up-|> ethanmmd.utils.WithGraphicsView
  ethanmmd.mastermind.views.graphics.ColorView o-- ethanmmd.mastermind.models.Color : color
  ethanmmd.mastermind.views.graphics.ErrorView -up-|> ethanmmd.utils.WithGraphicsView
  ethanmmd.mastermind.views.graphics.ErrorView o-- ethanmmd.mastermind.models.Error : error
  ethanmmd.mastermind.views.graphics.GraphicsView .up.|> ethanmmd.mastermind.controllers.ControllerVisitor
  ethanmmd.mastermind.views.graphics.GraphicsView -up-|> ethanmmd.mastermind.views.View
  ethanmmd.mastermind.views.graphics.GraphicsView o-- ethanmmd.mastermind.views.graphics.ProposalView : proposalView
  ethanmmd.mastermind.views.graphics.GraphicsView o-- ethanmmd.mastermind.views.ResumeView : resumeView
  ethanmmd.mastermind.views.graphics.GraphicsView o-- ethanmmd.mastermind.views.graphics.StartView : startView
  ethanmmd.mastermind.views.graphics.ProposalView o-- ethanmmd.mastermind.views.graphics.SecretCombinationView : secretCombinationView
  ethanmmd.mastermind.views.graphics.ResultView o-- ethanmmd.mastermind.models.Result : result
  ethanmmd.mastermind.views.graphics.SecretCombinationView -up-|> ethanmmd.utils.WithGraphicsView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
